# TODO

./: README.md  pyproject.toml  run_polling.py
TODO/: celery.py  settings.py  urls.py  utils.py
account/: urls.py  views.py
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_telegram_tg_username_telegram_tg_chat_id_and_more.py  0003_alter_telegram_tg_chat_id_and_more.py  0004_telegram_confirmed.py  0005_telegram_tg_username.py
static/css/: style.css
static/js/: script.js
templates/: base.html
templates/account/: login.html  register.html  register_completed.html
templates/accounts/: login.html  profile.html  register.html  register_completed.html  tg_connect.html
templates/todolist/: lobby.html
tg_bot/: handler.py  main.py  utils.py
tg_bot/handlers/: buttons.py  register.py
todolist/: forms.py  models.py  tasks.py  urls.py  views.py
todolist/migrations/: 0001_initial.py  0002_alter_task_date_time.py  0003_alter_task_title.py  0004_task_done.py  0005_notification_task_notification.py  0006_remove_task_date_time_alter_notification_sent.py
