[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["holyshitt <izvekovp429@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
psycopg2 = "^2.9.7"
python-telegram-bot = "^20.5"
pytelegrambotapi = "^4.13.0"
idna = "^3.4"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
